# sympycalcs

./: .jupyter_ystore.db  README.md  export.ipynb  pyproject.toml  setup.py
.ipynb_checkpoints/: export-checkpoint.ipynb  setup-checkpoint.py
.virtual_documents/: export.ipynb
.virtual_documents/src/: examples.ipynb
examples/: example_rayleigh.ipynb  example_rayleigh.tex  example_rayleigh_quotient_mms.ipynb
examples/.ipynb_checkpoints/: example_rayleigh_quotient_mms-checkpoint.ipynb
src/: examples.html  examples.ipynb
src/.ipynb_checkpoints/: examples-checkpoint.ipynb
src/examples/: example_rayleigh.ipynb  example_rayleigh_quotient_mms.ipynb
src/examples/.ipynb_checkpoints/: example_rayleigh-checkpoint.ipynb
src/sympycalcs/: __init__.py  beton.py  helpers.py
src/sympycalcs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sympycalcs/.ipynb_checkpoints/: calcs-checkpoint.py  convert-checkpoint.py  ekv_03-checkpoint.ipynb  export-checkpoint.py  helpers-checkpoint.py  render-checkpoint.py  test-checkpoint.ipynb
sympycalcs/: __init__.py  convert.py  export.py  helpers.py  render.py  test.aux  test.fdb_latexmk  test.fls  test.ipynb  test.tex
sympycalcs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sympycalcs/.ipynb_checkpoints/: test_Rayleigh-checkpoint.ipynb
test/: test.docx  test.ipynb  test2.ipynb
test/.ipynb_checkpoints/: test2-checkpoint.ipynb
tests/: test_sympycalcs.py
